[gd_scene load_steps=11 format=2]

[ext_resource path="res://main_windows.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://panel.gd" type="Script" id=3]
[ext_resource path="res://gui.tres" type="DynamicFont" id=4]
[ext_resource path="res://menu_button_graph.gd" type="Script" id=5]
[ext_resource path="res://menu_button_algorithms.gd" type="Script" id=6]
[ext_resource path="res://graph.gd" type="Script" id=7]
[ext_resource path="res://u_graph.gd" type="Script" id=8]
[ext_resource path="res://window_dialog_adjacency_matrix.gd" type="Script" id=9]
[ext_resource path="res://window_dialog_incidence_matrix.gd" type="Script" id=10]

[node name="MainWindows" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 43.0
theme = ExtResource( 2 )

[node name="HBoxContainerPanel" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 25.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="MenuButtonGraph" type="MenuButton" parent="VBoxContainer/HBoxContainerPanel"]
margin_right = 64.0
margin_bottom = 25.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "GRAPH"
flat = false
script = ExtResource( 5 )

[node name="ButtonDefault" type="Button" parent="VBoxContainer/HBoxContainerPanel"]
margin_left = 68.0
margin_right = 148.0
margin_bottom = 25.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
text = "DEFAULT"

[node name="ButtonAddVertex" type="Button" parent="VBoxContainer/HBoxContainerPanel"]
margin_left = 152.0
margin_right = 258.0
margin_bottom = 25.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
text = "ADD VERTEX"

[node name="ButtonAddEdge" type="Button" parent="VBoxContainer/HBoxContainerPanel"]
margin_left = 262.0
margin_right = 350.0
margin_bottom = 25.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
text = "ADD EDGE"

[node name="MenuButtonAlgorithms" type="MenuButton" parent="VBoxContainer/HBoxContainerPanel"]
margin_left = 354.0
margin_right = 466.0
margin_bottom = 25.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "ALGORITHMS"
flat = false
script = ExtResource( 6 )

[node name="ButtonDelete" type="Button" parent="VBoxContainer/HBoxContainerPanel"]
margin_left = 470.0
margin_right = 539.0
margin_bottom = 25.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
text = "DELETE"

[node name="ButtonSwitch" type="Button" parent="VBoxContainer/HBoxContainerPanel"]
margin_left = 543.0
margin_right = 751.0
margin_bottom = 25.0
theme = ExtResource( 2 )
text = "Неориентированный граф"

[node name="OGraph" type="Node2D" parent="."]
visible = false
script = ExtResource( 7 )

[node name="UGraph" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="WindowDialogAdjacencyMatrix" type="WindowDialog" parent="."]
editor/display_folded = true
margin_left = 390.0
margin_top = 235.0
margin_right = 890.0
margin_bottom = 485.0
theme = ExtResource( 2 )
custom_fonts/title_font = ExtResource( 4 )
window_title = "Adjacency matrix"
script = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialogAdjacencyMatrix"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="WindowDialogAdjacencyMatrix/VBoxContainer"]
margin_right = 500.0
margin_bottom = 41.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Задайте матрицу смежности. Используйте запятую \",\" в качестве разделителя"
autowrap = true

[node name="TextEdit" type="TextEdit" parent="WindowDialogAdjacencyMatrix/VBoxContainer"]
margin_top = 45.0
margin_right = 500.0
margin_bottom = 221.0
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="WindowDialogAdjacencyMatrix/VBoxContainer"]
margin_left = 335.0
margin_top = 225.0
margin_right = 500.0
margin_bottom = 250.0
size_flags_horizontal = 8
theme = ExtResource( 2 )

[node name="ButtonSave" type="Button" parent="WindowDialogAdjacencyMatrix/VBoxContainer/HBoxContainer"]
margin_right = 92.0
margin_bottom = 25.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Сохранить"

[node name="ButtonCancel" type="Button" parent="WindowDialogAdjacencyMatrix/VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 165.0
margin_bottom = 25.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Отмена"

[node name="WindowDialogIncidenceMatrix" type="WindowDialog" parent="."]
editor/display_folded = true
margin_left = 390.0
margin_top = 235.0
margin_right = 890.0
margin_bottom = 485.0
theme = ExtResource( 2 )
custom_fonts/title_font = ExtResource( 4 )
window_title = "Adjacency matrix"
script = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialogIncidenceMatrix"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="WindowDialogIncidenceMatrix/VBoxContainer"]
margin_right = 500.0
margin_bottom = 41.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Задайте матрицу инцидентности. Используйте запятую \",\" в качестве разделителя"
autowrap = true

[node name="TextEdit" type="TextEdit" parent="WindowDialogIncidenceMatrix/VBoxContainer"]
margin_top = 45.0
margin_right = 500.0
margin_bottom = 221.0
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="WindowDialogIncidenceMatrix/VBoxContainer"]
margin_left = 335.0
margin_top = 225.0
margin_right = 500.0
margin_bottom = 250.0
size_flags_horizontal = 8
theme = ExtResource( 2 )

[node name="ButtonSave" type="Button" parent="WindowDialogIncidenceMatrix/VBoxContainer/HBoxContainer"]
margin_right = 92.0
margin_bottom = 25.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Сохранить"

[node name="ButtonCancel" type="Button" parent="WindowDialogIncidenceMatrix/VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 165.0
margin_bottom = 25.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Отмена"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 501.587
margin_top = 322.0
margin_right = 799.587
margin_bottom = 473.0
theme = ExtResource( 2 )
window_title = "Algorithm"
[connection signal="toggled" from="VBoxContainer/HBoxContainerPanel/ButtonDefault" to="VBoxContainer/HBoxContainerPanel" method="_on_ButtonDefault_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainerPanel/ButtonAddVertex" to="VBoxContainer/HBoxContainerPanel" method="_on_ButtonAddVertex_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainerPanel/ButtonAddEdge" to="VBoxContainer/HBoxContainerPanel" method="_on_ButtonAddEdge_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainerPanel/ButtonDelete" to="VBoxContainer/HBoxContainerPanel" method="_on_ButtonDelete_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainerPanel/ButtonSwitch" to="." method="_on_ButtonSwitch_pressed"]
[connection signal="pressed" from="WindowDialogAdjacencyMatrix/VBoxContainer/HBoxContainer/ButtonSave" to="WindowDialogAdjacencyMatrix" method="_on_ButtonSave_pressed"]
[connection signal="pressed" from="WindowDialogAdjacencyMatrix/VBoxContainer/HBoxContainer/ButtonCancel" to="WindowDialogAdjacencyMatrix" method="_on_ButtonCancel_pressed"]
[connection signal="pressed" from="WindowDialogIncidenceMatrix/VBoxContainer/HBoxContainer/ButtonSave" to="WindowDialogIncidenceMatrix" method="_on_ButtonSave_pressed"]
[connection signal="pressed" from="WindowDialogIncidenceMatrix/VBoxContainer/HBoxContainer/ButtonCancel" to="WindowDialogIncidenceMatrix" method="_on_ButtonCancel_pressed"]
